--- a/src/MaiorNumero/app/src/main/res/layout/activity_main.xml
+++ b/src/MaiorNumero/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:id="@+id/numero1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="150sp"
+        android:textSize="120sp"
+        android:layout_weight="1"
         android:layout_gravity="center"
         android:onClick="compara1"
         />
@@ -22,20 +23,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="compara2"
-        android:textSize="150sp" />
+        android:layout_weight="1"
+        android:textSize="120sp"
+        android:layout_marginTop="20dp"/>
 
-    <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        >
     <TextView
         android:id="@+id/resultado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="90px"
-        android:textAlignment="center"
+        android:layout_weight="1"
+        android:layout_gravity="bottom|center"
         android:text="@string/clique_para_iniciar"
-        />
-    </LinearLayout>
+        android:textAlignment="center"
+        android:textSize="30sp"/>
 </LinearLayout>
