--- a/src/MaiorNumero/app/src/main/res/layout/activity_main.xml
+++ b/src/MaiorNumero/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,20 @@
         android:layout_marginTop="20dp"/>
 
     <TextView
-        android:id="@+id/resultado"
+        android:id="@+id/resultado1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="bottom|center"
         android:text="@string/clique_para_iniciar"
+        android:textAlignment="center"
+        android:textSize="30sp"/>
+    <TextView
+        android:id="@+id/resultado2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="bottom|center"
         android:textAlignment="center"
         android:textSize="30sp"/>
 </LinearLayout>
